--- a/reactjsexam/package.json
+++ b/reactjsexam/package.json
@@ -16,7 +16,8 @@
     "react-bootstrap": "^1.0.1",
     "react-bootstrap-carousel": "^4.0.6",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "typewriter-effect": "^2.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
